--- a/style.css
+++ b/style.css
@@ -31,12 +31,17 @@ main {
 }
 
 .containers {
+    display: grid;
+    grid-template-areas: 
+    "container1"
+    "container2"
+    "container3";
     height: 90%;
     width: 80%;
 }
 
 .container1 {
-    height: 33.33%;
+    grid-area: container1;
     padding: 30px 20px;
     background-color: white;
 }
@@ -59,9 +64,9 @@ h1 {
 }
 
 .container2{
+    grid-area: container2;
     background-color: var(--Cyan);
     padding: 30px 20px;
-    height: 33.33%;
 }
 
 h2 {
@@ -80,10 +85,11 @@ h2 {
 
 span {
     font-size: 14px;
+    color: rgba(255, 255, 255, 0.61);
 }
 
 .info2 {
-    color: white;
+    color: rgb(255, 255, 255);
     padding-top: 10px;
     padding-bottom: 20px;
 }
@@ -99,14 +105,100 @@ button {
 .container3 {
     padding: 20px 20px;
     background-color: hsl(179, 62%, 47%);
-    height: 33.33%;
+    grid-area: container3;
 }
 
 
 .info3 {
-
     padding-top: 10px;
     padding-right: 20%;
-    color: white;
+    color: rgba(255, 255, 255, 0.767);
     line-height: 22px;
+}
+
+.attribution { 
+    font-size: 11px; 
+    text-align: center;
+}
+.attribution a { color: hsl(228, 45%, 44%); }
+
+@media screen and (min-width:1440px) {   
+    .containers {
+        grid-template-areas:
+        "container1 container1"
+        "container2 container3";
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .container1 {   
+        grid-area: container1;
+    }
+
+    h1 {
+        font-size: 28px;
+        padding: 30px 30px;
+    }
+
+    .days{
+        font-size: 20px;
+        padding: 0px 30px;
+        padding-bottom: 30px;
+        font-weight: 600;
+        padding-top: 10px;
+    }
+
+    .info {
+        padding-top: 10px;
+        font-size: 18px;
+        padding-left: 30px;
+        width: 80%;
+        line-height: 30px;
+    }
+    
+    .container2 {
+        grid-area: container2;
+    }
+
+    h2 {
+        font-size: 28px;
+        padding: 20px 30px;
+    }
+    
+    .value {
+        font-size: 46px;
+        padding: 0 30px;
+    }
+
+    .info2 {
+        font-size: 20px;
+        padding: 10px 30px;
+    }
+
+    button {
+        margin: 20px 30px;
+        width: 80%;
+        height: 25%;
+    }
+
+    .container3 {
+        grid-area: container3;
+    }
+
+    .info3 {
+        font-size: 18px;
+        padding: 0 30px;
+        width: 80%;
+        line-height: 30px;
+
+    }
+
+
+    .attribution { 
+        font-size: 11px; 
+        text-align: center;
+        bottom: 20px;
+        left: 50%;
+     }
+    .attribution a { color: hsl(228, 45%, 44%); }
 }
